# outline-panel

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: Caddyfile.example  outline-bot.service  outline-panel-bot.service  outline-panel.service  outline-webapp.service
src/outline_panel/: __init__.py  cli.py  config.py  db.py  list_users.py  outline_api.py  scheduler.py  security.py  settings.py  utils.py
src/outline_panel/bot/: __init__.py  core.py  dispatcher.py  manager.py  run.py
src/outline_panel/core/: __init__.py  config.py  db.py  outline_api.py  rights.py  scheduler.py  security.py  settings.py  utils.py
src/outline_panel/static/: index.html  miniapp.html  sub.html
src/outline_panel/web/: __init__.py  app.py  deps.py  registry.py  run.py
src/outline_panel/web/routers/: __init__.py  admins.py  auth.py  backup.py  keys.py  miniapp.py  packages.py  servers.py  settings.py  stats.py  subscription.py
tests/: conftest.py  test_admins_core.py  test_bot.py  test_cookie.py  test_credit.py  test_db.py  test_features.py  test_miniapp.py  test_outline_api.py  test_scheduler.py  test_security.py  test_settings_api.py  test_subadmins.py  test_utils.py  test_webapp.py
