[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outline-panel"
version = "1.0.0"
description = "Web dashboard + Telegram bot for managing Outline VPN servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Outline Panel contributors" }]
keywords = ["outline", "vpn", "shadowsocks", "telegram-bot", "fastapi"]
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "aiogram>=3.7,<4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "itsdangerous>=2.1",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/your-org/outline-panel"
Issues = "https://github.com/your-org/outline-panel/issues"

[project.scripts]
outline-panel = "outline_panel.web.run:cli"
outline-panel-bot = "outline_panel.bot.run:cli"
outline-panel-admin = "outline_panel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
outline_panel = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
